--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,8 @@
         "psr-4": {
             "PragmaGoTech\\Interview\\": "src/"
         }
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^11.2"
     }
 }
